# SchoolSearchAgent

./: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  api_service.py  dashboard_queries.py  docker-compose.yml  pyproject.toml  run_school_db_agent_cron.sh
config/: langsmith_pricing_probes.yaml  model_pricing.yaml
deploy/: cloudbuild-api.yaml  cloudbuild-ci-deploy.yaml  cloudbuild-web.yaml
docs/: ARCHITECTURE.md  GITHUB.md  USER_MANUAL.md
dubai/: __init__.py  __main__.py  agent.py  ask_agent.py  ask_prompt.py  ask_tools.py  cli.py  cost_tracker.py  curriculum.py  data_sources.py  graph_client.py  guardrails.py  langsmith_env.py  langsmith_pricing_sync.py  llm_router.py  model_pricing.py  provider_env.py  schemas.py  settings.py  text.py
evals/: __init__.py  ask_evaluators.py  ci_gate.py  datasets.py  eval_parsing.py  eval_qa.py  feedback.py
scripts/: gcp_deploy.sh  gcp_sync_job.sh  init_constraints.cypher  setup_deploy_webhook.sh  setup_github_actions_deploy.sh  verify_open_data_parse.py  verify_open_data_registry.py
tests/: test_agent_nodes.py  test_api_service.py  test_ask_scope.py  test_ask_tools.py  test_cli.py  test_cost_tracker.py  test_curriculum.py  test_dashboard_queries.py  test_data_sources.py  test_evals.py  test_feedback.py  test_graph_client.py  test_guardrails.py  test_langsmith_pricing_sync.py  test_llm_router.py  test_model_pricing.py  test_provider_env.py  test_schemas.py  test_settings.py  test_text.py
web/: .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
web/app/: layout.tsx  (+1 more)
(+26 files in other folders)
