[project]
name = "schoolsearchagent"
version = "0.1.0"
description = "Dubai private education knowledge graph pipeline and REST microservice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "neo4j>=5.15.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "requests>=2.31.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "langsmith>=0.1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
providers = [
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-xai>=0.1.0",
    "langchain-groq>=0.2.0",
    "langchain-ollama>=0.2.0",
]
evals = [
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
